# simple-http-server

./: CMakeLists.txt  README.md
configs/dev/: config_dev.yaml  static_config.yaml
docs/: userver_install.md
schemas/: service.yaml
src/: hello.cpp  main.cpp
